[ui -> User] fix cutting off content for ios and safari

--- a/packages/ui/components/User/index.styl
+++ b/packages/ui/components/User/index.styl
@@ -14,7 +14,7 @@
     margin-left 1u
 
 .userInfo
-  flex 1
+  flex-shrink 1
 
 .name,
 .description
